use file.contents
but ugh so dirty

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "gulp-util": "~2.2.0",
     "image-min": "~0.1.0",
     "graceful-fs": "~2.0.0",
-    "filesize": "~2.0.0"
+    "filesize": "~2.0.0",
+    "temp-write": "~0.1.0"
   },
   "devDependencies": {
     "mocha": "*"
