--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "gif"
   ],
   "dependencies": {
-    "event-stream": "~3.0.20",
+    "map-stream": "~0.0.4",
     "gulp-util": "~2.2.0",
     "image-min": "~0.1.0",
     "graceful-fs": "~2.0.0",
