--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "gif"
   ],
   "dependencies": {
-    "map-stream": "~0.0.4",
     "gulp-util": "~2.2.0",
+    "through": "~2.3.4",
     "image-min": "~0.1.0",
     "graceful-fs": "~2.0.0",
     "filesize": "~2.0.0",
