--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "gulp-imagemin",
-  "version": "0.1.4",
-  "description": "Minify PNG, JPEG and GIF images",
-  "license": "MIT",
-  "repository": "sindresorhus/gulp-imagemin",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "http://sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "scripts": {
-    "test": "mocha"
-  },
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "gulpplugin",
-    "image-min",
-    "image",
-    "img",
-    "picture",
-    "photo",
-    "minify",
-    "minifier",
-    "compress",
-    "png",
-    "jpg",
-    "jpeg",
-    "gif"
-  ],
-  "dependencies": {
-    "gulp-util": "~2.2.0",
-    "image-min": "~0.1.0",
-    "graceful-fs": "~2.0.0",
-    "filesize": "~2.0.0",
-    "temp-write": "~0.1.0",
-    "map-stream": "0.0.4"
-  },
-  "devDependencies": {
-    "mocha": "*"
-  }
+    "name": "gulp-imagemin",
+    "version": "0.1.4",
+    "description": "Minify PNG, JPEG and GIF images",
+    "license": "MIT",
+    "repository": "sindresorhus/gulp-imagemin",
+    "author": {
+        "name": "Sindre Sorhus",
+        "email": "sindresorhus@gmail.com",
+        "url": "http://sindresorhus.com"
+    },
+    "engines": {
+        "node": ">=0.10.0"
+    },
+    "scripts": {
+        "test": "mocha"
+    },
+    "files": [
+        "index.js"
+    ],
+    "keywords": [
+        "gulpplugin",
+        "image-min",
+        "image",
+        "img",
+        "picture",
+        "photo",
+        "minify",
+        "minifier",
+        "compress",
+        "png",
+        "jpg",
+        "jpeg",
+        "gif"
+    ],
+    "dependencies": {
+        "gulp-util": "~2.2.0",
+        "image-min": "~0.1.0",
+        "graceful-fs": "~2.0.0",
+        "filesize": "~2.0.0",
+        "temp-write": "~0.1.0",
+        "map-stream-limit": "~1.0.2"
+    },
+    "devDependencies": {
+        "mocha": "*"
+    }
 }
