--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "gif"
   ],
   "dependencies": {
-    "gulp-util": "~2.2.0",
-    "image-min": "~0.2.0",
-    "filesize": "~2.0.0",
-    "map-stream": "~0.1.0",
-    "xtend": "~2.2.0",
-    "concat-stream": "~1.4.4"
+    "chalk": "^0.4.0",
+    "concat-stream": "^1.4.4",
+    "gulp-util": "^2.2.0",
+    "image-min": "^0.3.0",
+    "object-assign": "^0.2.1",
+    "pretty-bytes": "^0.1.0",
+    "simple-bufferstream": "^0.0.4",
+    "through2": "^0.4.1"
   },
   "devDependencies": {
     "mocha": "*"
