`image-min` is `imagemin` now

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "keywords": [
     "gulpplugin",
-    "image-min",
+    "imagemin",
     "image",
     "img",
     "picture",
@@ -37,7 +37,7 @@
   "dependencies": {
     "chalk": "^0.4.0",
     "gulp-util": "^2.2.0",
-    "image-min": "^0.4.2",
+    "imagemin": "^0.4.2",
     "object-assign": "^0.3.0",
     "pretty-bytes": "^0.1.0",
     "through2": "^0.4.1"
