--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "imagemin": "^2.0.0",
     "object-assign": "^1.0.0",
     "pretty-bytes": "^1.0.1",
-    "through2": "^0.6.1"
+    "through2-concurrent": "^0.2.0"
   },
   "devDependencies": {
     "mocha": "*"
