--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-util": "^3.0.0",
     "imagemin": "^3.0.0",
     "object-assign": "^3.0.0",
+    "plur": "^1.0.0",
     "pretty-bytes": "^2.0.1",
     "through2-concurrent": "^1.1.0"
   },
