Use `imagemin-jpegtran` instead of `imagemin-mozjpeg`
Since `imagemin-mozjpeg` is causing some problems and `imagemin-jpegtran` seems to be more stable at the moment.

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "optionalDependencies": {
     "imagemin-gifsicle": "^5.0.0",
-    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-jpegtran": "^5.0.0",
     "imagemin-optipng": "^5.1.0",
     "imagemin-svgo": "^5.1.0"
   },
