--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "imagemin-gifsicle": "^5.0.0",
     "imagemin-jpegtran": "^5.0.0",
     "imagemin-optipng": "^5.1.0",
-    "imagemin-svgo": "^5.1.0"
+    "imagemin-svgo": "^5.1.0",
     "plur": "^2.0.0",
     "pretty-bytes": "^2.0.1",
     "through2-concurrent": "^1.1.0"
