--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 	],
 	"dependencies": {
 		"chalk": "^2.1.0",
-		"gulp-util": "^3.0.8",
+		"fancy-log": "^1.3.2",
+		"plugin-error": "^0.1.2",
 		"imagemin": "^5.3.1",
 		"plur": "^2.1.2",
 		"pretty-bytes": "^4.0.2",
@@ -47,7 +48,8 @@
 		"get-stream": "^3.0.0",
 		"imagemin-pngquant": "^5.0.1",
 		"pify": "^3.0.0",
-		"xo": "*"
+		"xo": "*",
+		"vinyl": "^2.1.0"
 	},
 	"optionalDependencies": {
 		"imagemin-gifsicle": "^5.2.0",
