--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"url": "sindresorhus.com"
 	},
 	"engines": {
-		"node": ">=4"
+		"node": ">=6"
 	},
 	"scripts": {
 		"test": "xo && ava"
@@ -35,26 +35,26 @@
 		"svg"
 	],
 	"dependencies": {
-		"chalk": "^2.1.0",
+		"chalk": "^2.4.1",
 		"fancy-log": "^1.3.2",
-		"plugin-error": "^0.1.2",
-		"imagemin": "^5.3.1",
-		"plur": "^2.1.2",
-		"pretty-bytes": "^4.0.2",
-		"through2-concurrent": "^1.1.1"
+		"plugin-error": "^1.0.1",
+		"imagemin": "^6.0.0",
+		"plur": "^3.0.1",
+		"pretty-bytes": "^5.1.0",
+		"through2-concurrent": "^2.0.0"
 	},
 	"devDependencies": {
-		"ava": "*",
-		"get-stream": "^3.0.0",
-		"imagemin-pngquant": "^5.0.1",
-		"pify": "^3.0.0",
-		"xo": "*",
-		"vinyl": "^2.1.0"
+		"ava": "^0.25.0",
+		"get-stream": "^4.1.0",
+		"imagemin-pngquant": "^6.0.0",
+		"pify": "^4.0.1",
+		"xo": "^0.23.0",
+		"vinyl": "^2.2.0"
 	},
 	"optionalDependencies": {
-		"imagemin-gifsicle": "^5.2.0",
-		"imagemin-jpegtran": "^5.0.2",
-		"imagemin-optipng": "^5.2.1",
-		"imagemin-svgo": "^6.0.0"
+		"imagemin-gifsicle": "^6.0.1",
+		"imagemin-jpegtran": "^6.0.0",
+		"imagemin-optipng": "^6.0.0",
+		"imagemin-svgo": "^7.0.0"
 	}
 }
