--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"url": "sindresorhus.com"
 	},
 	"engines": {
-		"node": ">=6"
+		"node": ">=8"
 	},
 	"scripts": {
 		"test": "xo && ava"
@@ -38,18 +38,17 @@
 		"chalk": "^2.4.1",
 		"fancy-log": "^1.3.2",
 		"plugin-error": "^1.0.1",
-		"imagemin": "^6.0.0",
+		"imagemin": "^6.1.0",
 		"plur": "^3.0.1",
 		"pretty-bytes": "^5.1.0",
 		"through2-concurrent": "^2.0.0"
 	},
 	"devDependencies": {
-		"ava": "^0.25.0",
-		"get-stream": "^4.1.0",
-		"imagemin-pngquant": "^6.0.0",
-		"pify": "^4.0.1",
-		"xo": "^0.23.0",
-		"vinyl": "^2.2.0"
+		"ava": "^1.4.1",
+		"get-stream": "^5.1.0",
+		"imagemin-pngquant": "^7.0.0",
+		"vinyl": "^2.2.0",
+		"xo": "^0.24.0"
 	},
 	"optionalDependencies": {
 		"imagemin-gifsicle": "^6.0.1",
