--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
 	},
 	"optionalDependencies": {
 		"imagemin-gifsicle": "^6.0.1",
-		"imagemin-jpegtran": "^6.0.0",
+		"imagemin-mozjpeg": "^8.0.0",
 		"imagemin-optipng": "^7.0.0",
 		"imagemin-svgo": "^7.0.0"
 	},
