--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
 	"description": "Minify PNG, JPEG, GIF and SVG images",
 	"license": "MIT",
 	"repository": "sindresorhus/gulp-imagemin",
+	"funding": "https://github.com/sponsors/sindresorhus",
 	"author": {
 		"name": "Sindre Sorhus",
 		"email": "sindresorhus@gmail.com",
 		"url": "sindresorhus.com"
 	},
 	"engines": {
-		"node": ">=8"
+		"node": ">=10"
 	},
 	"scripts": {
 		"test": "xo && ava"
@@ -35,7 +36,7 @@
 		"svg"
 	],
 	"dependencies": {
-		"chalk": "^2.4.1",
+		"chalk": "^3.0.0",
 		"fancy-log": "^1.3.2",
 		"imagemin": "^7.0.0",
 		"plugin-error": "^1.0.1",
@@ -48,7 +49,7 @@
 		"get-stream": "^5.1.0",
 		"imagemin-pngquant": "^8.0.0",
 		"vinyl": "^2.2.0",
-		"xo": "^0.24.0"
+		"xo": "^0.25.3"
 	},
 	"optionalDependencies": {
 		"imagemin-gifsicle": "^6.0.1",
