--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
 	"author": {
 		"name": "Sindre Sorhus",
 		"email": "sindresorhus@gmail.com",
-		"url": "sindresorhus.com"
+		"url": "https://sindresorhus.com"
 	},
+	"type": "module",
+	"exports": "./index.js",
 	"engines": {
-		"node": ">=10"
+		"node": "^12.20.0 || ^14.13.1 || >=16.0.0"
 	},
 	"scripts": {
 		"test": "xo && ava"
@@ -36,26 +38,26 @@
 		"svg"
 	],
 	"dependencies": {
-		"chalk": "^3.0.0",
-		"fancy-log": "^1.3.2",
-		"imagemin": "^7.0.0",
+		"chalk": "^4.1.2",
+		"fancy-log": "^1.3.3",
+		"imagemin": "^8.0.1",
 		"plugin-error": "^1.0.1",
-		"plur": "^3.0.1",
-		"pretty-bytes": "^5.3.0",
+		"plur": "^4.0.0",
+		"pretty-bytes": "^5.6.0",
 		"through2-concurrent": "^2.0.0"
 	},
 	"devDependencies": {
-		"ava": "^2.3.0",
-		"get-stream": "^5.1.0",
-		"imagemin-pngquant": "^8.0.0",
-		"vinyl": "^2.2.0",
-		"xo": "^0.25.3"
+		"ava": "^3.15.0",
+		"get-stream": "^6.0.1",
+		"imagemin-pngquant": "^9.0.2",
+		"vinyl": "^2.2.1",
+		"xo": "^0.44.0"
 	},
 	"optionalDependencies": {
 		"imagemin-gifsicle": "^7.0.0",
-		"imagemin-mozjpeg": "^8.0.0",
-		"imagemin-optipng": "^7.0.0",
-		"imagemin-svgo": "^7.0.0"
+		"imagemin-mozjpeg": "^9.0.0",
+		"imagemin-optipng": "^8.0.0",
+		"imagemin-svgo": "^9.0.0"
 	},
 	"peerDependencies": {
 		"gulp": ">=4"
