--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"type": "module",
 	"exports": "./index.js",
 	"engines": {
-		"node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+		"node": ">=18"
 	},
 	"scripts": {
 		"test": "xo && ava"
@@ -38,26 +38,23 @@
 		"svg"
 	],
 	"dependencies": {
-		"chalk": "^4.1.2",
-		"fancy-log": "^1.3.3",
+		"chalk": "^5.3.0",
+		"gulp-plugin-extras": "^0.2.2",
 		"imagemin": "^8.0.1",
-		"plugin-error": "^1.0.1",
-		"plur": "^4.0.0",
-		"pretty-bytes": "^5.6.0",
-		"through2-concurrent": "^2.0.0"
+		"plur": "^5.1.0",
+		"pretty-bytes": "^6.1.1"
 	},
 	"devDependencies": {
-		"ava": "^3.15.0",
-		"get-stream": "^6.0.1",
+		"ava": "^5.3.1",
 		"imagemin-pngquant": "^9.0.2",
-		"vinyl": "^2.2.1",
-		"xo": "^0.44.0"
+		"vinyl": "^3.0.0",
+		"xo": "^0.56.0"
 	},
 	"optionalDependencies": {
 		"imagemin-gifsicle": "^7.0.0",
-		"imagemin-mozjpeg": "^9.0.0",
+		"imagemin-mozjpeg": "^10.0.0",
 		"imagemin-optipng": "^8.0.0",
-		"imagemin-svgo": "^9.0.0"
+		"imagemin-svgo": "^10.0.1"
 	},
 	"peerDependencies": {
 		"gulp": ">=4"
