- For xo, it is important to exclude the cjs directory since those are compiled files  - There are three files (test.js, gulpfile.js and babel.config.js) which necessarily use require syntax. To remove these errors, I have reduced prefer-module level to warning.

--- a/package.json
+++ b/package.json
@@ -75,5 +75,13 @@
 		"gulp": {
 			"optional": true
 		}
+	},
+	"xo": {
+		"ignores": [
+			"cjs"
+		],
+		"rules": {
+			"unicorn/prefer-module": 1
+		}
 	}
 }
