--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"type": "module",
 	"exports": "./index.js",
+	"sideEffects": false,
 	"engines": {
 		"node": ">=18"
 	},
@@ -39,16 +40,16 @@
 	],
 	"dependencies": {
 		"chalk": "^5.3.0",
-		"gulp-plugin-extras": "^0.2.2",
-		"imagemin": "^8.0.1",
+		"gulp-plugin-extras": "^1.0.0",
+		"imagemin": "^9.0.0",
 		"plur": "^5.1.0",
 		"pretty-bytes": "^6.1.1"
 	},
 	"devDependencies": {
-		"ava": "^5.3.1",
+		"ava": "^6.1.2",
 		"imagemin-pngquant": "^9.0.2",
 		"vinyl": "^3.0.0",
-		"xo": "^0.56.0"
+		"xo": "^0.58.0"
 	},
 	"optionalDependencies": {
 		"imagemin-gifsicle": "^7.0.0",
